--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,22 @@
 Package: gamlss.spatial
 Type: Package
-Title: Spatial Terms in GAMLSS Models
-Version: 1.3.1
-Date: 2015-11-13
+Title: Spatial Terms in Generalized Additive Models for Location Scale and Shape Models
+Version: 3.0-2
+Date: 2023-10-14
 Authors@R: c(person("Fernanda", "De Bastiani", role = c("aut", "cre", "cph"), email = "fernandadebastiani@gmail.com"),
              person("Mikis", "Stasinopoulos", role = c("aut"), 
-             email = "d.stasinopoulos@londonmet.ac.uk"),
-           person("Bob", "Rigby", role = c("aut"),  
-           email = "r.rigby@londonmet.ac.uk" )
+             email = "d.stasinopoulos@gre.ac.uk"),
+           person("Robert", "Rigby", role = c("aut"))
            )
-Description: It allows us to fit Gaussian Markov Random Field (GMRF) within the
-    GAMLSS algorithms.
+Description: It allows us to fit Gaussian Markov Random Field within the
+    Generalized Additive Models for Location Scale and Shape algorithms.
 License: GPL-2 | GPL-3
-URL: http://www.gamlss.org/
+URL: https://www.gamlss.com/
 Depends:
     R (>= 2.15.0),
     gamlss.dist,
     gamlss (>= 4.2-7),
+    gamlss.add,
     spam,
     mgcv
 Imports:
@@ -24,15 +24,11 @@ Imports:
     grDevices,
     graphics,
     methods
-Suggests:
-    spdep,
-    maptools,
-    testthat
 Repository: CRAN
 NeedsCompilation: no
 Packaged: 2015-07-09 13:32:17 UTC; stasinom
 Author: Fernanda De Bastiani [aut, cre, cph],
     Mikis Stasinopoulos [aut],
-    Bob Rigby [aut]
+    Robert Rigby [aut]
 Maintainer: Fernanda De Bastiani <fernandadebastiani@gmail.com>
 RoxygenNote: 5.0.1
