--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,16 @@
 Package: gamlss.spatial
-Type: Package
-Title: Spatial Terms in Generalized Additive Models for Location Scale and Shape Models
-Version: 3.0-2
-Date: 2023-10-14
-Authors@R: c(person("Fernanda", "De Bastiani", role = c("aut", "cre", "cph"), email = "fernandadebastiani@gmail.com"),
-             person("Mikis", "Stasinopoulos", role = c("aut"), 
-             email = "d.stasinopoulos@gre.ac.uk"),
-           person("Robert", "Rigby", role = c("aut"))
+Title: Spatial Terms in Generalized Additive Models for Location Scale and Shape
+Version: 3.0-3
+Date: 2023-11-04
+Authors@R: c(person("Fernanda", "De Bastiani", role = c("aut", "cre", "cph"), email = "fernandadebastiani@gmail.com", comment = c(ORCID = "0000-0001-8532-639X")),
+             person("Mikis", "Stasinopoulos", role = "aut", email = "d.stasinopoulos@gre.ac.uk", comment = c(ORCID = "0000-0003-2407-5704")),
+             person("Robert", "Rigby", role = "aut", email = "r.rigby@gre.ac.uk", comment = c(ORCID = "0000-0003-3853-1707"))
            )
-Description: It allows us to fit Gaussian Markov Random Field within the
+Description: The packages enables fitting Gaussian Markov Random Fields within the
     Generalized Additive Models for Location Scale and Shape algorithms.
 License: GPL-2 | GPL-3
 URL: https://www.gamlss.com/
+BugReports: https://github.com/gamlss-dev/gamlss.spatial/issues
 Depends:
     R (>= 2.15.0),
     gamlss.dist,
@@ -24,11 +23,4 @@ Imports:
     grDevices,
     graphics,
     methods
-Repository: CRAN
-NeedsCompilation: no
-Packaged: 2015-07-09 13:32:17 UTC; stasinom
-Author: Fernanda De Bastiani [aut, cre, cph],
-    Mikis Stasinopoulos [aut],
-    Robert Rigby [aut]
-Maintainer: Fernanda De Bastiani <fernandadebastiani@gmail.com>
 RoxygenNote: 5.0.1
